--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "express": "3.4.0",
-    "hjs": "*"
+    "hjs": "*",
+    "socket.io": "~0.9.6"
   },
  "engines": {
      "node": "0.10.x",
