--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pademobile-milo",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "start": "node app.js"
@@ -8,7 +8,9 @@
   "dependencies": {
     "express": "~3.4.0",
     "hjs": "*",
-    "socket.io": "~0.9.6"
+    "socket.io": "~0.9.6",
+    "excel-export": "*",
+    "elasicsearchclient": "~0.5.3"
   },
  "engines": {
      "node": "0.10.x",
